--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -5,21 +5,34 @@
     <h:head>
         <title>Facelet Title</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
+        <link href="login-box.css" rel="stylesheet" type="text/css" />
     </h:head>
     <h:body>
 
 
-        <form >
-            <!--Creamos los campos y un label para cada uno de ellos-->
-            <label name="TxtUser">Usuario: </label>
-            <input type="text" name="InpUser" id="InpUser"/><br />
-            <label name="TxtPassword">Contraseña: </label>
-            <!--Este input debe ser -type="password" para que no se muestren los caracteres-->
-            <input type="password" name="InpPassword" id="InpPassword"/><br />
-            <!--Al dar click al botón se ejecutará el -action-->
-            <input type="submit" value="Iniciar Sesión"/>
+        <form>
+            <div style="padding: 100px 0 0 250px;">
+
+
+                <div id="login-box">
+
+                    <H2>Login</H2>
+                    <br />
+                    <br />
+                    <div id="login-box-name" style="margin-top:20px;">Usuario:</div><div id="login-box-field" style="margin-top:20px;"><input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" /></div>
+                    <div id="login-box-name">Contraseña:</div><div id="login-box-field"><input name="q" type="password" class="form-login" title="Password" value="" size="30" maxlength="2048" /></div>
+                    <br />
+
+                    <span class="login-box-options"><input type="checkbox" name="1" value="1"/> Remember Me <a href="#" style="margin-left:30px;">Forgot password?</a></span>
+                    <br />
+                    <br />
+                    <a href="#"><img src="images/login-btn.png" width="103" height="42" style="margin-left: 40%;" /></a>
+
+
+                </div>
+
+            </div>
         </form>
-        <br />
 
         <h:link outcome="/cursos/List" value="Show All Cursos Items"/>
         <br />
