--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -19,14 +19,15 @@
                     <H2>Login</H2>
                     <br />
                     <br />
-                    <div id="login-box-name" style="margin-top:20px;">Usuario:</div><div id="login-box-field" style="margin-top:20px;"><input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" /></div>
-                    <div id="login-box-name">Contraseña:</div><div id="login-box-field"><input name="q" type="password" class="form-login" title="Password" value="" size="30" maxlength="2048" /></div>
+                    <div id="login-box-name" style="margin-top:20px;">Usuario:</div><div id="login-box-field" style="margin-top:20px;"><input name="q" class="form-login" title="Username" value="#{mBLogin.usuario}" size="30" maxlength="2048" /></div>
+                    <div id="login-box-name">Contraseña:</div><div id="login-box-field"><input name="q" type="password" class="form-login" title="Password" value="#{mBLogin.contraseña}" size="30" maxlength="2048" /></div>
                     <br />
 
                     <span class="login-box-options"><input type="checkbox" name="1" value="1"/> Remember Me <a href="#" style="margin-left:30px;">Forgot password?</a></span>
                     <br />
                     <br />
-                    <a href="#"><img src="images/login-btn.png" width="103" height="42" style="margin-left: 40%;" /></a>
+                    <h:commandButton value="Ingresar" action="#{mBLogin.login()}" image="images/login-btn.png"  style="margin-left: 40%;"></h:commandButton><h:messages/>
+                    
 
 
                 </div>
